@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Pod-Perldoc
-version:             3.14_04
+version:             3.14_05
 abstract:            look up Perl documentation in Pod format
 license:             perl
 author:              ~
